# rs-tiny-claw

./: .gitignore  Cargo.toml  LICENSE  README.md  env.example
examples/: command.rs
src/: error.rs  lib.rs  main.rs
src/channel/: feishu_approval.rs  feishu_bot.rs  mod.rs
src/context/: compactor.rs  composer.rs  mod.rs  recovery.rs  skill.rs
src/engine/: loop.rs  mod.rs  reminder.rs  reporter.rs  session.rs  terminal_reporter.rs
src/eval/: benchmark.rs
src/observability/: mod.rs  trace.rs  tracker.rs
src/provider/: mod.rs  openai.rs
src/schema/: mod.rs
src/tools/: bash.rs  edit_file.rs  mod.rs  read_file.rs  subagent.rs  write_file.rs
