[package]
name = "rs-tiny-claw"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
async-trait = "0.1"
reqwest = { version = "0.13.4", features = ["json"] }
futures = "0.3.32"
openlark = { version = "0.16.1", default-features = false, features = [
    "communication",
    "websocket",
    "webhook-card",
    "webhook-signature",
] }
walkdir = "2.5.0"
clap = { version = "4.6.1", features = ["derive"] }
hex = "0.4.3"
md-5 = "0.11.0"
